--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,19 @@ cmake_minimum_required(VERSION 3.3)
 
 project(vulkan_ex)
 
-add_executable(${PROJECT_NAME} main.cpp)
+# Global CMake options:
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED true)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Generates compile_commands.json
+
+set(src_files
+    main.cpp
+
+    src/init_core.cpp
+)
+
+# Create the executable:
+add_executable(${PROJECT_NAME} ${src_files})
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
