--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,8 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/l
 target_link_libraries(${PROJECT_NAME} PRIVATE glm)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lib/glm)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/glm)
+
+# vulkan
+find_package(Vulkan REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
+target_include_directories(${PROJECT_NAME} PRIVATE ${Vulkan_INCLUDE_DIRS})
