Graphics pipeline initialized.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ target_include_directories(${PROJECT_NAME}
 # Add compiler options:
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror -Wno-unknown-pragmas -Wno-unused-function)
 
+# Add compiler definitions:
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    -DASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/"
+)
+
 # Core library:
 target_link_libraries(${PROJECT_NAME} PRIVATE core)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lib/core)
