Project structure refactored to support multiple examples.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Debug Test with GCC",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/vulkan_ex",
+            "program": "${workspaceFolder}/build/ex_02",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
